// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies a component as the text label 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "rgba(231, 224, 236, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
      },
      {},
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(28, 27, 31, 1)",
        "bottom": 0,
        "height": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "transform": [
          {
            "scaleY": 0.5,
          },
        ],
        "zIndex": 1,
      }
    }
    testID="text-input-underline"
  />
  <View
    onLayout={[Function]}
    style={
      [
        {
          "paddingBottom": 0,
          "paddingTop": 0,
        },
        {
          "minHeight": 56,
        },
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": [
            {
              "translateX": 4,
            },
          ],
          "width": 750,
          "zIndex": 3,
        }
      }
    >
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        onLayout={[Function]}
        onTextLayout={[Function]}
        style={
          {
            "color": "rgba(103, 80, 164, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "maxWidth": 73,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -12,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-active"
      >
        <Text
          style={
            {
              "color": "#f44336",
            }
          }
        >
          Flat input
        </Text>
      </Text>
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          {
            "color": "rgba(73, 69, 79, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "maxWidth": 73,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -12,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-inactive"
      >
        <Text
          style={
            {
              "color": "#f44336",
            }
          }
        >
          Flat input
        </Text>
      </Text>
    </View>
    <TextInput
      cursorColor="rgba(103, 80, 164, 1)"
      editable={true}
      maxFontSizeMultiplier={1.5}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder=" "
      placeholderTextColor="rgba(73, 69, 79, 1)"
      selectionColor="rgba(103, 80, 164, 1)"
      style={
        [
          {
            "margin": 0,
          },
          {
            "height": 56,
          },
          {
            "paddingBottom": 4,
            "paddingTop": 24,
          },
          {
            "color": "rgba(73, 69, 79, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "minWidth": 65,
            "paddingLeft": 16,
            "paddingRight": 16,
            "textAlign": "left",
            "textAlignVertical": "center",
          },
          false,
          [
            {},
          ],
          undefined,
        ]
      }
      testID="text-input-flat"
      underlineColorAndroid="transparent"
      value="Some test value"
    />
  </View>
</View>
`;

exports[`correctly applies cursorColor prop 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "rgba(231, 224, 236, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
      },
      {},
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(28, 27, 31, 1)",
        "bottom": 0,
        "height": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "transform": [
          {
            "scaleY": 0.5,
          },
        ],
        "zIndex": 1,
      }
    }
    testID="text-input-underline"
  />
  <View
    onLayout={[Function]}
    style={
      [
        {
          "paddingBottom": 0,
          "paddingTop": 0,
        },
        {
          "minHeight": 56,
        },
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": [
            {
              "translateX": 4,
            },
          ],
          "width": 750,
          "zIndex": 3,
        }
      }
    >
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        onLayout={[Function]}
        onTextLayout={[Function]}
        style={
          {
            "color": "rgba(103, 80, 164, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "maxWidth": 73,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -12,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-active"
      >
        Flat input
      </Text>
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          {
            "color": "rgba(73, 69, 79, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "maxWidth": 73,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -12,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-inactive"
      >
        Flat input
      </Text>
    </View>
    <TextInput
      cursorColor="#f44336"
      editable={true}
      maxFontSizeMultiplier={1.5}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder=" "
      placeholderTextColor="rgba(73, 69, 79, 1)"
      selectionColor="rgba(103, 80, 164, 1)"
      style={
        [
          {
            "margin": 0,
          },
          {
            "height": 56,
          },
          {
            "paddingBottom": 4,
            "paddingTop": 24,
          },
          {
            "color": "rgba(73, 69, 79, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "minWidth": 65,
            "paddingLeft": 16,
            "paddingRight": 16,
            "textAlign": "left",
            "textAlignVertical": "center",
          },
          false,
          [
            {},
          ],
          undefined,
        ]
      }
      testID="text-input-flat"
      underlineColorAndroid="transparent"
      value="Some test value"
    />
  </View>
</View>
`;

exports[`correctly applies default textAlign based on default RTL 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "rgba(231, 224, 236, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
      },
      {},
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(28, 27, 31, 1)",
        "bottom": 0,
        "height": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "transform": [
          {
            "scaleY": 0.5,
          },
        ],
        "zIndex": 1,
      }
    }
    testID="text-input-underline"
  />
  <View
    onLayout={[Function]}
    style={
      [
        {
          "paddingBottom": 0,
          "paddingTop": 0,
        },
        {
          "minHeight": 56,
        },
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": [
            {
              "translateX": 4,
            },
          ],
          "width": 750,
          "zIndex": 3,
        }
      }
    >
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        onLayout={[Function]}
        onTextLayout={[Function]}
        style={
          {
            "color": "rgba(103, 80, 164, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "maxWidth": 73,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -12,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-active"
      >
        Flat input
      </Text>
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          {
            "color": "rgba(73, 69, 79, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "maxWidth": 73,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -12,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-inactive"
      >
        Flat input
      </Text>
    </View>
    <TextInput
      cursorColor="rgba(103, 80, 164, 1)"
      editable={true}
      maxFontSizeMultiplier={1.5}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder=" "
      placeholderTextColor="rgba(73, 69, 79, 1)"
      selectionColor="rgba(103, 80, 164, 1)"
      style={
        [
          {
            "margin": 0,
          },
          {
            "height": 56,
          },
          {
            "paddingBottom": 4,
            "paddingTop": 24,
          },
          {
            "color": "rgba(73, 69, 79, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "minWidth": 65,
            "paddingLeft": 16,
            "paddingRight": 16,
            "textAlign": "left",
            "textAlignVertical": "center",
          },
          false,
          [
            {},
          ],
          undefined,
        ]
      }
      testID="text-input-flat"
      underlineColorAndroid="transparent"
      value="Some test value"
    />
  </View>
</View>
`;

exports[`correctly applies height to multiline Outline TextInput 1`] = `
<View
  style={{}}
>
  <View
    pointerEvents="none"
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 6,
        },
        false,
        {
          "backgroundColor": "rgba(255, 251, 254, 1)",
          "borderColor": "rgba(121, 116, 126, 1)",
          "borderRadius": 4,
          "borderWidth": 1,
        },
        undefined,
      ]
    }
    testID="text-input-outline"
  />
  <View
    style={
      [
        {
          "paddingBottom": 0,
        },
        {
          "minHeight": 100,
          "paddingTop": 8,
        },
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": [
            {
              "translateX": 3,
            },
          ],
          "width": 750,
          "zIndex": 3,
        }
      }
    >
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          {
            "backgroundColor": "rgba(255, 251, 254, 1)",
            "color": "transparent",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 8,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "opacity": 1,
            "paddingHorizontal": 0,
            "position": "absolute",
            "textAlign": "left",
            "top": 59,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -52,
              },
              {
                "scale": 0.75,
              },
              {
                "scaleY": 0.2,
              },
            ],
            "width": -16,
            "writingDirection": "ltr",
          }
        }
        testID="text-input-outlined-label-background"
      >
        Outline Input
      </Text>
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        onLayout={[Function]}
        onTextLayout={[Function]}
        style={
          {
            "color": "rgba(103, 80, 164, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "maxWidth": 73,
            "opacity": 0,
            "paddingHorizontal": 16,
            "position": "absolute",
            "textAlign": "left",
            "top": 58,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -52,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-outlined-label-active"
      >
        Outline Input
      </Text>
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          {
            "color": "rgba(73, 69, 79, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "maxWidth": 73,
            "opacity": 0,
            "paddingHorizontal": 16,
            "position": "absolute",
            "textAlign": "left",
            "top": 58,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -52,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-outlined-label-inactive"
      >
        Outline Input
      </Text>
    </View>
    <TextInput
      cursorColor="rgba(103, 80, 164, 1)"
      editable={true}
      maxFontSizeMultiplier={1.5}
      multiline={true}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onLayout={[Function]}
      placeholder=" "
      placeholderTextColor="rgba(73, 69, 79, 1)"
      selectionColor="rgba(103, 80, 164, 1)"
      style={
        [
          {
            "margin": 0,
          },
          {
            "height": 100,
          },
          {
            "paddingBottom": 24,
            "paddingTop": 24,
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "minWidth": 65,
            "paddingHorizontal": 16,
            "textAlign": "left",
            "textAlignVertical": "top",
          },
          false,
          [
            {},
          ],
          undefined,
        ]
      }
      testID="text-input-outlined"
      underlineColorAndroid="transparent"
      value="Some test value"
    />
  </View>
</View>
`;

exports[`correctly applies paddingLeft from contentStyleProp 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "rgba(231, 224, 236, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
      },
      {},
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(28, 27, 31, 1)",
        "bottom": 0,
        "height": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "transform": [
          {
            "scaleY": 0.5,
          },
        ],
        "zIndex": 1,
      }
    }
    testID="text-input-underline"
  />
  <View
    onLayout={[Function]}
    style={
      [
        {
          "paddingBottom": 0,
          "paddingTop": 0,
        },
        {
          "minHeight": 56,
        },
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": [
            {
              "translateX": 4,
            },
          ],
          "width": 750,
          "zIndex": 3,
        }
      }
    >
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        onLayout={[Function]}
        onTextLayout={[Function]}
        style={
          {
            "color": "rgba(103, 80, 164, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "maxWidth": 73,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -12,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-active"
      >
        With padding
      </Text>
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          {
            "color": "rgba(73, 69, 79, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "maxWidth": 73,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -12,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-inactive"
      >
        With padding
      </Text>
    </View>
    <TextInput
      cursorColor="rgba(103, 80, 164, 1)"
      editable={true}
      maxFontSizeMultiplier={1.5}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder=" "
      placeholderTextColor="rgba(73, 69, 79, 1)"
      selectionColor="rgba(103, 80, 164, 1)"
      style={
        [
          {
            "margin": 0,
          },
          {
            "height": 56,
          },
          {
            "paddingBottom": 4,
            "paddingTop": 24,
          },
          {
            "color": "rgba(73, 69, 79, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "minWidth": 65,
            "paddingLeft": 16,
            "paddingRight": 16,
            "textAlign": "left",
            "textAlignVertical": "center",
          },
          false,
          [
            {},
          ],
          {
            "paddingLeft": 20,
          },
        ]
      }
      testID="text-input-flat"
      underlineColorAndroid="transparent"
      value="Some test value"
    />
  </View>
</View>
`;

exports[`correctly applies textAlign center 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "rgba(231, 224, 236, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
      },
      {},
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(28, 27, 31, 1)",
        "bottom": 0,
        "height": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "transform": [
          {
            "scaleY": 0.5,
          },
        ],
        "zIndex": 1,
      }
    }
    testID="text-input-underline"
  />
  <View
    onLayout={[Function]}
    style={
      [
        {
          "paddingBottom": 0,
          "paddingTop": 0,
        },
        {
          "minHeight": 56,
        },
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": [
            {
              "translateX": 4,
            },
          ],
          "width": 750,
          "zIndex": 3,
        }
      }
    >
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        onLayout={[Function]}
        onTextLayout={[Function]}
        style={
          {
            "color": "rgba(103, 80, 164, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "maxWidth": 73,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -12,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-active"
      >
        Flat input
      </Text>
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          {
            "color": "rgba(73, 69, 79, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "maxWidth": 73,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -12,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-inactive"
      >
        Flat input
      </Text>
    </View>
    <TextInput
      cursorColor="rgba(103, 80, 164, 1)"
      editable={true}
      maxFontSizeMultiplier={1.5}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder=" "
      placeholderTextColor="rgba(73, 69, 79, 1)"
      selectionColor="rgba(103, 80, 164, 1)"
      style={
        [
          {
            "margin": 0,
          },
          {
            "height": 56,
          },
          {
            "paddingBottom": 4,
            "paddingTop": 24,
          },
          {
            "color": "rgba(73, 69, 79, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "minWidth": 65,
            "paddingLeft": 16,
            "paddingRight": 16,
            "textAlign": "center",
            "textAlignVertical": "center",
          },
          false,
          [
            {},
          ],
          undefined,
        ]
      }
      testID="text-input-flat"
      underlineColorAndroid="transparent"
      value="Some test value"
    />
  </View>
</View>
`;

exports[`correctly renders left-side affix adornment, and right-side icon adornment 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "rgba(231, 224, 236, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
      },
      {},
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(28, 27, 31, 1)",
        "bottom": 0,
        "height": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "transform": [
          {
            "scaleY": 0.5,
          },
        ],
        "zIndex": 1,
      }
    }
    testID="text-input-underline"
  />
  <View
    onLayout={[Function]}
    style={
      [
        {
          "paddingBottom": 0,
          "paddingTop": 0,
        },
        {
          "minHeight": 56,
        },
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": [
            {
              "translateX": 4,
            },
          ],
          "width": 750,
          "zIndex": 3,
        }
      }
    >
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        onLayout={[Function]}
        onTextLayout={[Function]}
        style={
          {
            "color": "rgba(103, 80, 164, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "maxWidth": 73,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 56,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -12,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-active"
      >
        Flat input
      </Text>
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          {
            "color": "rgba(73, 69, 79, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "maxWidth": 73,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 56,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -12,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-inactive"
      >
        Flat input
      </Text>
    </View>
    <TextInput
      cursorColor="rgba(103, 80, 164, 1)"
      editable={true}
      maxFontSizeMultiplier={1.5}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder=" "
      placeholderTextColor="rgba(73, 69, 79, 1)"
      selectionColor="rgba(103, 80, 164, 1)"
      style={
        [
          {
            "margin": 0,
          },
          {
            "height": 56,
          },
          {
            "paddingBottom": 4,
            "paddingTop": 24,
          },
          {
            "color": "rgba(73, 69, 79, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "minWidth": 65,
            "paddingLeft": 16,
            "paddingRight": 56,
            "textAlign": "left",
            "textAlignVertical": "center",
          },
          false,
          {
            "marginLeft": 0,
            "marginRight": 40,
            "paddingLeft": 40,
            "paddingRight": 16,
          },
          undefined,
        ]
      }
      testID="text-input-flat"
      underlineColorAndroid="transparent"
      value="Some test value"
    />
  </View>
  <View
    collapsable={false}
    onLayout={[Function]}
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "left": 16,
        "opacity": 1,
        "position": "absolute",
        "top": null,
      }
    }
    testID="left-affix-adornment"
  >
    <Text
      maxFontSizeMultiplier={1.5}
      style={
        [
          {
            "color": "rgba(73, 69, 79, 1)",
          },
          {
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
          },
          {
            "color": "#f44336",
          },
        ]
      }
      testID="left-affix-adornment-text"
    >
      /100
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "height": 24,
          "justifyContent": "center",
          "position": "absolute",
          "width": 24,
        },
        {
          "right": 16,
          "top": 16,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "transparent",
          "borderRadius": 20,
          "height": 40,
          "margin": 0,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
          "width": 40,
        }
      }
      testID="right-icon-adornment-container-outer-layer"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "transparent",
            "borderColor": "rgba(121, 116, 126, 1)",
            "borderRadius": 20,
            "borderWidth": 0,
            "elevation": 0,
            "flex": 1,
            "overflow": "hidden",
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
        testID="right-icon-adornment-container"
      >
        <View
          accessibilityComponentType="button"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityTraits="button"
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          centered={true}
          collapsable={false}
          focusable={true}
          hitSlop={
            {
              "bottom": 6,
              "left": 6,
              "right": 6,
              "top": 6,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              [
                {
                  "alignItems": "center",
                  "flexGrow": 1,
                  "justifyContent": "center",
                },
                {
                  "borderRadius": 20,
                },
              ],
            ]
          }
          testID="right-icon-adornment"
        >
          <Text
            accessibilityElementsHidden={true}
            allowFontScaling={false}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(73, 69, 79, 1)",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
                {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            󰋑
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`correctly renders left-side icon adornment, and right-side affix adornment 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "rgba(231, 224, 236, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
      },
      {},
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(28, 27, 31, 1)",
        "bottom": 0,
        "height": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "transform": [
          {
            "scaleY": 0.5,
          },
        ],
        "zIndex": 1,
      }
    }
    testID="text-input-underline"
  />
  <View
    onLayout={[Function]}
    style={
      [
        {
          "paddingBottom": 0,
          "paddingTop": 0,
        },
        {
          "minHeight": 56,
        },
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": [
            {
              "translateX": 14,
            },
          ],
          "width": 750,
          "zIndex": 3,
        }
      }
    >
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        onLayout={[Function]}
        onTextLayout={[Function]}
        style={
          {
            "color": "rgba(103, 80, 164, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "maxWidth": 73,
            "opacity": 0,
            "paddingLeft": 56,
            "paddingRight": 56,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -12,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-active"
      >
        Flat input
      </Text>
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          {
            "color": "rgba(73, 69, 79, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "maxWidth": 73,
            "opacity": 0,
            "paddingLeft": 56,
            "paddingRight": 56,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -12,
              },
              {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
        testID="text-input-flat-label-inactive"
      >
        Flat input
      </Text>
    </View>
    <TextInput
      cursorColor="rgba(103, 80, 164, 1)"
      editable={true}
      maxFontSizeMultiplier={1.5}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder=" "
      placeholderTextColor="rgba(73, 69, 79, 1)"
      selectionColor="rgba(103, 80, 164, 1)"
      style={
        [
          {
            "margin": 0,
          },
          {
            "height": 56,
          },
          {
            "paddingBottom": 4,
            "paddingTop": 24,
          },
          {
            "color": "rgba(73, 69, 79, 1)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
            "minWidth": 65,
            "paddingLeft": 56,
            "paddingRight": 56,
            "textAlign": "left",
            "textAlignVertical": "center",
          },
          false,
          {
            "marginLeft": 40,
            "marginRight": 0,
            "paddingLeft": 16,
            "paddingRight": 40,
          },
          undefined,
        ]
      }
      testID="text-input-flat"
      underlineColorAndroid="transparent"
      value="Some test value"
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "height": 24,
          "justifyContent": "center",
          "position": "absolute",
          "width": 24,
        },
        {
          "left": 16,
          "top": 16,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "transparent",
          "borderRadius": 20,
          "height": 40,
          "margin": 0,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
          "width": 40,
        }
      }
      testID="left-icon-adornment-container-outer-layer"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "transparent",
            "borderColor": "rgba(121, 116, 126, 1)",
            "borderRadius": 20,
            "borderWidth": 0,
            "elevation": 0,
            "flex": 1,
            "overflow": "hidden",
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
        testID="left-icon-adornment-container"
      >
        <View
          accessibilityComponentType="button"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityTraits="button"
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          centered={true}
          collapsable={false}
          focusable={true}
          hitSlop={
            {
              "bottom": 6,
              "left": 6,
              "right": 6,
              "top": 6,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              [
                {
                  "alignItems": "center",
                  "flexGrow": 1,
                  "justifyContent": "center",
                },
                {
                  "borderRadius": 20,
                },
              ],
            ]
          }
          testID="left-icon-adornment"
        >
          <Text
            accessibilityElementsHidden={true}
            allowFontScaling={false}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(73, 69, 79, 1)",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
                {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            󰋑
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    collapsable={false}
    onLayout={[Function]}
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "opacity": 1,
        "position": "absolute",
        "right": 16,
        "top": null,
      }
    }
    testID="right-affix-adornment"
  >
    <Text
      maxFontSizeMultiplier={1.5}
      style={
        [
          {
            "color": "rgba(73, 69, 79, 1)",
          },
          {
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": undefined,
            "letterSpacing": 0.15,
            "lineHeight": 19.2,
          },
          {
            "color": "#f44336",
          },
        ]
      }
      testID="right-affix-adornment-text"
    >
      /100
    </Text>
  </View>
</View>
`;
